--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/framework7/5.6.0/js/framework7.bundle.min.js"></script>
-    <title>[ Job & Seek ]</title>
+    <title>[ Experian ]</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/framework7/5.6.0/css/framework7.bundle.min.css">
     <link rel="stylesheet" href="css/index.css">
     <style>
