fixed elipse bug

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,9 +23,9 @@
             <div class="block-title block-title-medium">Contacts</div>
             <div class="block m10">
                 {{#each contacts}}
-                <div class="block-title" style="font-size:12px;">
+                <p style="color:dodgerblue">
                     {{description}}
-                </div>
+                </p>
                 <div class="shadow-card stats" style="padding: 20px;">
                     {{contact}}
                     <br>
