--- a/pages/home.html
+++ b/pages/home.html
@@ -26,9 +26,9 @@
 
             <div class="block m10">
                 {{#each faq}}
-                <div class="block-title">
+                <p style="color:dodgerblue">
                     {{question}}
-                </div>
+                </p>
                 <div class="shadow-card stats" style="padding: 20px;">
                     {{answer}}
                 </div>
